add missing entry to manifest

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -24,6 +24,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".TileViewActivity" />
         <activity android:name=".MapTileViewActivity" />
         <activity android:name=".DateTimeActivity" />
         <activity android:name=".SettingsActivity" />
