--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.ff.armaandroid"
+    package="org.ff.armaconnect"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -16,7 +16,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
+            android:name="org.ff.armaconnect.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,12 +24,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".TileViewActivity" />
-        <activity android:name=".MapTileViewActivity" />
-        <activity android:name=".DateTimeActivity" />
-        <activity android:name=".SettingsActivity" />
+        <activity android:name="org.ff.armaconnect.TileViewActivity" />
+        <activity android:name="org.ff.armaconnect.MapTileViewActivity" />
+        <activity android:name="org.ff.armaconnect.DateTimeActivity" />
+        <activity android:name="org.ff.armaconnect.SettingsActivity" />
         <activity
-            android:name=".ConnectingActivity"
+            android:name="org.ff.armaconnect.ConnectingActivity"
             android:label="@string/app_name" >
         </activity>
     </application>
