--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="org.ff.armaconnect.MainActivity"
+            android:name=".MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,14 +24,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="org.ff.armaconnect.TileViewActivity" />
-        <activity android:name="org.ff.armaconnect.MapTileViewActivity" />
-        <activity android:name="org.ff.armaconnect.DateTimeActivity" />
-        <activity android:name="org.ff.armaconnect.SettingsActivity" />
-        <activity
-            android:name="org.ff.armaconnect.ConnectingActivity"
-            android:label="@string/app_name" >
-        </activity>
+        <activity android:name=".TileViewActivity" />
+        <activity android:name=".MapTileViewActivity" />
+        <activity android:name=".DateTimeActivity" />
+        <activity android:name=".SettingsActivity" />
+        <activity android:name=".ConnectingActivity" />
+        <activity android:name=".WeatherActivity" />
     </application>
 
 </manifest>
