--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@
 
 buildscript {
     repositories {
-        mavenCentral()
+        jcenter()
     }
 
 	//HACK
@@ -10,7 +10,7 @@ buildscript {
 	//System.properties['com.android.build.gradle.overrideVersionCheck'] = 'true'
 
 	dependencies {
-		classpath 'com.android.tools.build:gradle:2.2.3'
+		classpath 'com.android.tools.build:gradle:2.3.1'
 	}
 }
 apply plugin: 'com.android.application'
